WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279693
[WebGPU] Debug assertion in RenderBundleEncoder::currentRenderCommand() fails when RenderBundle has zero commands
https://bugs.webkit.org/show_bug.cgi?id=279693
Summary
[WebGPU] Debug assertion in RenderBundleEncoder::currentRenderCommand() fails...
Mike Wyrzykowski
Reported
2024-09-13 13:46:35 PDT
[WebGPU] Debug assertion in RenderBundleEncoder::currentRenderCommand() fails when RenderBundle has zero commands
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-09-13 13:46:46 PDT
radar://135708146
Mike Wyrzykowski
Comment 2
2024-09-13 13:52:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33639
EWS
Comment 3
2024-10-01 21:20:39 PDT
Committed
284539@main
(c4a3d3b51a46): <
https://commits.webkit.org/284539@main
> Reviewed commits have been landed. Closing PR #33639 and removing active labels.
EWS
Comment 4
2024-10-02 08:47:44 PDT
Committed
283286.174@safari-7620-branch
(3873b49b6b06): <
https://commits.webkit.org/283286.174@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1954 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug