[WebGPU] Debug assertion in RenderBundleEncoder::currentRenderCommand() fails when RenderBundle has zero commands https://bugs.webkit.org/show_bug.cgi?id=279693 radar://135708146

Reviewed by Tadeu Zagallo.

When commandCount is zero, we would replay the first recorded operation
when that was not needed, triggering the debug assertion in currentRenderCommand()

* LayoutTests/fast/webgpu/nocrash/fuzz-279693-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-279693.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::endCurrentICB):

Canonical link: https://commits.webkit.org/284539@main